# m33mu

./: .gitignore  CMakeLists.txt  README.md  bench.py  m33mu.1
.github/workflows/: capstone-fuzz-pr.yml  capstone-fuzz.yml  ctest-build-all-deps.yml  ctest.yml  test-firmware-stm32h5-spi.yml  test-firmware.yml
cmake/: RustPlugin.cmake
cpu/: mm_host_crypto.c  mm_host_crypto.h  nrf_timers.c  nrf_timers.h  nrf_uart_spi.c  nrf_uart_spi.h  stm32_crypto.c  stm32_crypto.h  stm32_crypto_priv.h  stm32_gpdma.c  stm32_gpdma.h  stm32_gpio.c  stm32_gpio.h  stm32_spi.c  stm32_spi.h  stm32_timers.c  stm32_timers.h  stm32_usart.c  stm32_usart.h  stm32_usb_fs.c  stm32_usb_fs.h
cpu/lpc55s69/: cpu_config.h  lpc55s69_casper.c  lpc55s69_casper.h  lpc55s69_flexcomm.c  lpc55s69_flexcomm.h  lpc55s69_hashcrypt.c  lpc55s69_hashcrypt.h  lpc55s69_mmio.c  lpc55s69_mmio.h  lpc55s69_romapi.c  lpc55s69_romapi.h  lpc55s69_timers.c  lpc55s69_timers.h
cpu/mcxn947/: cpu_config.h  mcxn947_flexcomm.c  mcxn947_flexcomm.h  mcxn947_mmio.c  mcxn947_mmio.h  mcxn947_romapi.c  mcxn947_romapi.h  mcxn947_secure.c  mcxn947_secure.h  mcxn947_timers.c  mcxn947_timers.h
cpu/mcxw71c/: cpu_config.h  mcxw71c_mmio.c  mcxw71c_spi.c  mcxw71c_usart.c
cpu/nrf5340/: cpu_config.h  nrf5340_cryptocell.c  nrf5340_cryptocell.h  nrf5340_mmio.c  nrf5340_mmio.h  nrf5340_timers.c  nrf5340_uart_spi.c  nrf5340_wdt.c
cpu/nrf54lm20/: cpu_config.h  nrf54lm20_mmio.c  nrf54lm20_mmio.h  nrf54lm20_timers.c  nrf54lm20_timers.h  nrf54lm20_uart_spi.c  nrf54lm20_uart_spi.h
cpu/pic32ck/: cpu_config.h  pic32ck_mmio.c  pic32ck_mmio.h  pic32ck_sercom.c  pic32ck_sercom.h  pic32ck_timers.c  pic32ck_timers.h
cpu/rp2350/: cpu_config.h  rp2350_bootrom.c  rp2350_bootrom.h  rp2350_coproc.c  rp2350_coproc.h  rp2350_mmio.c  rp2350_mmio.h  rp2350_timers.c  rp2350_timers.h  rp2350_uart_spi.c  rp2350_uart_spi.h  rp2350_usb.c  rp2350_usb.h
cpu/rw612/: cpu_config.h  rw612_flexcomm.c  rw612_flexcomm.h  rw612_mmio.c  rw612_mmio.h  rw612_romapi.c  rw612_romapi.h  rw612_secure.c  rw612_secure.h  rw612_timers.c  rw612_timers.h
cpu/stm32h533/: cpu_config.h  stm32h533_eth.c  stm32h533_eth.h  stm32h533_mmio.c  stm32h533_mmio.h  stm32h533_spi.c  stm32h533_spi.h  stm32h533_timers.c  stm32h533_timers.h  stm32h533_usart.c  stm32h533_usart.h  stm32h533_usb.c  stm32h533_usb.h
cpu/stm32h563/: cpu_config.h  stm32h563_eth.c  stm32h563_i2c.c  stm32h563_i2c.h  stm32h563_mmio.c  stm32h563_mmio.h  stm32h563_spi.c  stm32h563_timers.c  stm32h563_usart.c  stm32h563_usb.c
cpu/stm32l552/: cpu_config.h  stm32l552_mmio.c  stm32l552_spi.c  stm32l552_timers.c  stm32l552_usart.c  stm32l552_usb.c  stm32l552_usb.h
cpu/stm32u585/: cpu_config.h  stm32u585_mmio.c  stm32u585_spi.c  stm32u585_timers.c  stm32u585_usart.c
docs/: ci-testing.md  cli-usage.md  getting-started.md  loading-images.md  supported-HSEs.md  supported-cpus.md
include/m33mu/: atecc608.h  capstone.h  code_cache.h  core_sys.h  cpu.h  decode.h  dsp_helpers.h  eth_backend.h  exc_return.h  exec_helpers.h  execute.h  fetch.h  flash_persist.h  gdbstub.h  i2c_bus.h  iotsafe_test_certs.h  iotsafe_uart.h  mem_prot.h  memmap.h  mmio.h  mpu.h  nvic.h  otfdec.h  otp.h  pka.h  sau.h  scs.h  se050.h  snapshot.h  spi_bus.h  spiflash.h  stsafe.h  ta100.h  target.h  target_hal.h  trace.h  tropic01.h  tt.h  tz.h  undo.h  (+2 more)
scripts/: run_capstone_fuzz_split.sh
scripts/python-unicorn/: README.md  compare_trace.py
src/: core_interfaces.c  core_sys.c  cpu_db.c  exc_return.c  execute.c  flash_persist.c  gdbstub.c  main.c  memmap.c  nvic.c  otp.c  runloop.c  scs.c  snapshot.c  system_reset.c  target_hal.c  trace.c  vector.c
src/m33mu/: atecc608.c  capstone.c  capstone_stub.c  code_cache.c  cpu.c  decode.c  eth_backend.c  exception.c  exec_helpers.c  fetch.c  i2c_bus.c  iotsafe_uart.c  mem.c  mem_prot.c  mpu.c  otfdec.c  pka.c  sau.c  se050.c  spi_bus.c  spiflash.c  stsafe.c  ta100.c  ta100.c.orig  tpm_tis.c  tropic01.c  tt.c  tz.c  unicorn.c  unicorn_stub.c  usbdev.c
tests/: cpu_banks_test.c  decode_capstone_fuzz_full32_test.c  decode_phase2_test.c  decode_phase3_test.c  exc_return_test.c  exception_cross_domain_test.c  exception_vector_test.c  exec_cmsis_float_to_q15_test.c  exec_compliance_regressions_test.c  exec_curve_load_alu_test.c  exec_div_test.c  exec_dsp_parallel_test.c  exec_dsp_qflag_test.c  exec_dsp_qsat_test.c  exec_dsp_smlad_test.c  exec_dsp_smul_test.c  exec_ecc_alu_chain_test.c  exec_ecc_cmp_repro_test.c  exec_ed25519_ctx_sanity_test.c  exec_fpu_basic_test.c  exec_fpu_convert_test.c  exec_fpu_directed_rint_test.c  exec_fpu_fpv5_binops_test.c  exec_fpu_vcvt_half_fixed_test.c  exec_fpu_vpush_vpop_test.c  exec_helper_test.c  exec_it_lsl_imm_flags_test.c  exec_it_thumb1_alias_flags_matrix_test.c  exec_it_thumb1_raw_alu_flags_test.c  exec_ldr_pc_jump_table_test.c  exec_longmul_test.c  exec_mem_boundary_test.c  exec_misc_thumb2_test.c  exec_sp_clamp_ct_test.c  exec_sp_limit_test.c  exec_verify_authenticity_test.c  gdbstub_packet_test.c  i2c_bus_test.c  iotsafe_uart_test.c  mcxn947_security_test.c  (+19 more)
tests/firmware/bench-speed/: Makefile  bench.c
tests/firmware/test-fpu-instructions/: Makefile  ivt.c  main.c  target.ld
tests/firmware/test-lpc55s69/: ivt.c  main.c  target.ld
tests/firmware/test-lpc55s69-casper/: ivt.c  main.c
tests/firmware/test-lpc55s69-hashcrypt/: ivt.c  main.c  syscalls.c
tests/firmware/test-lpc55s69-sdk/: Makefile  emu_board.c  ivt.c  syscalls.c  test_crc.c  test_iap.c  test_mrt.c
tests/firmware/test-mcxn947/: Makefile  ivt.c  main.c  syscalls.c  target.ld
tests/firmware/test-nrf5340/: main.c
tests/firmware/test-nrf5340-cryptocell/: ivt.c  main.c  syscalls.c  target.ld
tests/firmware/test-nrf54lm20/: ivt.c  main.c  syscalls.c  target.ld
tests/firmware/test-pic32ck/: Makefile  emu_board.c  target.ld  test_uart.c
tests/firmware/test-pic32ck-sdk/: Makefile  emu_board.c  ivt.c  syscalls.c  test_fcw.c  test_gpio.c  test_idau.c  test_tcc.c  test_trng.c  test_uart.c
tests/firmware/test-rtos-exceptions/: ivt.c  rtos_exception_test.c
tui/: tui.c  tui.h  tui_stub.c
(+53 files in other folders)
